# abs-dnb

./: .dockerignore  .gitignore  .mise.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cliff.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
abs_dnb/: covers.py  dnb.py  main.py  marc.py
openspec/: config.yaml
openspec/changes/add-dnb-provider/: design.md  proposal.md  tasks.md
openspec/changes/add-dnb-provider/specs/dnb-metadata-provider/: spec.md
openspec/changes/add-health-route/: tasks.md
openspec/changes/add-health-route/specs/dnb-metadata-provider/: spec.md
openspec/changes/archive/2026-06-09-add-dnb-provider/: design.md  tasks.md
openspec/changes/archive/2026-06-09-add-dnb-provider/specs/dnb-metadata-provider/: spec.md
openspec/changes/archive/2026-06-09-add-health-route/: proposal.md  tasks.md
openspec/changes/archive/2026-06-09-harden-search/: proposal.md  tasks.md
openspec/changes/archive/2026-06-09-harden-search/specs/dnb-metadata-provider/: spec.md
openspec/changes/harden-search/: tasks.md
openspec/specs/dnb-metadata-provider/: spec.md
tests/: conftest.py  test_covers.py  test_marc_parser.py  test_search.py
tests/fixtures/: dnb-explain.xml  espresso-luciani.xml  hebamme-ebert.xml  leises-gift.xml  missing-subfield-a.xml  saeulen.xml  tintenherz.xml  vorleser.xml
