[project]
name = "abs-dnb"
version = "0.1.0"
description = "Audiobookshelf custom metadata provider sourcing German editions from the Deutsche Nationalbibliothek SRU API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "grusim" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pymarc>=5.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "respx>=0.21",
    "pre-commit>=4.0",
    # Same 0.15 line as the ruff-pre-commit hook, so on-demand `ruff` and the
    # commit hook format identically.
    "ruff~=0.15.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["abs_dnb"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Shared config for both `ruff` in the venv and the ruff-pre-commit hook.
# Mirrors ruff's defaults (88 cols, target inferred from requires-python) so it
# changes no formatting; explicit here as the single source of truth.
[tool.ruff]
line-length = 88
target-version = "py312"
